change articles file icon change config for host fix bug with find users

--- a/app/views/another/search.phtml
+++ b/app/views/another/search.phtml
@@ -25,7 +25,7 @@
                                 <p><?= $item['name'] ?></p>
                             </div>
                             <div class="col-xs-2 col-xs-offset-3">
-                                <form method="post" action="/anotheruser/show">
+                                <form method="post" action="/another/show">
                                     <input name="name" type="hidden" value="<?= $item['name'] ?>">
                                     <button class="btn btn-primary" type="submit">Перейти</button>
                                 </form>
