--- a/app/views/menu/menu.phtml
+++ b/app/views/menu/menu.phtml
@@ -13,11 +13,10 @@
             <ul class="nav navbar-nav">
                 <li><a href="/">Моя сторінка</a></li>
                 <li><a href="#subscribes" class="subscription" data-toggle="modal" data-target="#t_and_c_m">Підписки</a></li>
-                <li><a href="">Про нас</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
 
-                <form class="navbar-form navbar-left" role="search" method="post" action="/anotheruser/show">
+                <form class="navbar-form navbar-left" role="search" method="post" action="/another/show">
                     <div class="input-group ">
                         <input name="name" type="text" class="typeahead form-control" placeholder="Шукати" required>
                         <span class="search-buttom input-group-btn">
