--- a/app/views/profile/wall.phtml
+++ b/app/views/profile/wall.phtml
@@ -10,9 +10,11 @@
                     <div class="col-md-1 text-center first">
                         <img src="<?= $note['expansion'] ?>">
                     </div>
-                    <div class="col-md-10">
+                    <div class="col-md-10" id="test">
                         <div class="descriptionText">
+                            <p>
                             <?= $note['text'] ?>
+                            </p>
                         </div>
                     </div>
                     <div class="col-md-1 text-center first">
